JPEG-XL: fix linear HDR export

The version of libjxl we were using had broken support for HDR,
and updating it revealed some last-minute ABI breaks upstream.

To fix it, I'm updating libjxl to the 0.7 RC and highway to latest main.

BUG: 458054